changed fontcolor to dodgerblue

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <style>
 	.modify_this{
-		color: green;
+		color: dodgerblue;
 		font-weight: bold;
 		background-color: skyblue;
 	}
 	.modify_this_too{
 		color: aqua;
 	}
-	
+
 </style>
 </head>
 <body>
